<resources>
    <string name="app_name">tantan</string>
    <string name="todo">TODO</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Enter your Email</string>
    <string name="password">Enter Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="login">LOGIN</string>
    <string name="help">Help?</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="enter_your_username">Enter your Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="search_your_fruit_and_vegetables">search your fruit and vegetables</string>
    <string name="search">Search…</string>
    <string name="transaksi">Transaction</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="Account">account</string>
    <string name="account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart_fragment">Cart Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="account_fragment">Account Fragment</string>
    <string name="transaction_fragment">Transaction Fragment</string>
    <string name="personal_information">Personal Information</string>
    <string name="good_morning">Good Morning</string>
    <string name="march_6_2019">March 6, 2019</string>
    <string name="category">Category</string>
    <string name="article">Article</string>
    <string name="farmer_benefit">Farmer Benefit</string>
    <string name="content_of_article">Content of Article</string>
    <string name="strong_female_farmers">Strong Female Farmers</string>
    <string name="successful_young_farmers">successful young farmers</string>
    <string name="username">Edit your Username</string>
    <string name="complete_name">Complete Name</string>
    <string name="save_profile">Save Profile</string>
    <string name="cancel">Cancel</string>
</resources>
