<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

<android.support.constraint.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".menu"
        tools:ignore="ContentDescription"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="25dp">

    <ImageView
            android:id="@+id/pola"
            android:layout_width="450dp"
            android:layout_height="276dp"
            android:src="@drawable/pola"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="153dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"/>

    <ImageView
            android:id="@+id/box"
            android:layout_width="0dp"
            android:layout_height="471dp"
            android:background="@drawable/box"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp" android:layout_marginLeft="5dp" android:layout_marginStart="5dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.0"/>

    <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:fontFamily="@font/googlesansbold"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/box"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.079"/>

    <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:inputType="textCapWords"
            android:hint="@string/enter_your_username"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawablePadding="10dp"
            android:textSize="15sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/mailbox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp" android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.253"/>
    <EditText
            android:id="@+id/mail"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:inputType="textCapWords"
            android:hint="@string/email"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawablePadding="10dp"
            android:textSize="15sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/mailbox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp" android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/username"
            app:layout_constraintVertical_bias="0.0"/>

    <EditText
            android:id="@+id/password"
            android:layout_height="52dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
            android:drawablePadding="10dp"
            android:textSize="15sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/mailbox"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp" android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="32dp" android:layout_width="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/mail"
            app:layout_constraintVertical_bias="0.0"/>

    <EditText
            android:id="@+id/confirmpassword"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:drawablePadding="10dp"
            android:textSize="15sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/mailbox"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="32dp"
            android:layout_width="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.0"/>

    <Button
            android:id="@+id/register"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:background="@drawable/buttonsign"
            android:text="@string/register"
            app:fontFamily="@font/googlesansbold"
            android:textSize="15sp"
            android:textColor="#fff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/confirmpassword"/>

</android.support.constraint.ConstraintLayout>
</ScrollView>