<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgPrimary"
        tools:context=".masuk">

    <ScrollView
            android:id="@+id/scrollbar1"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <View
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="@drawable/color_gradient_gree"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <LinearLayout
                    android:id="@+id/ly_1"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:background="@drawable/bgbox"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:orientation="vertical">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:text="@string/sign_in"
                            app:fontFamily="@font/googlesansbold"
                            android:textColor="@color/colorGreen"
                            android:textSize="40sp"
                            android:layout_marginTop="24dp"
                            android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/tv_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/username"
                            android:textColor="@color/colorGreen"
                            app:fontFamily="@font/googlesansregular"
                            android:textSize="15sp"/>
                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/bginput"
                            android:hint="@string/enter_your_username"
                            android:inputType="text"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:drawableStart="@drawable/ic_person_black_24dp"
                            android:drawablePadding="10dp" />

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/tv_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/password"
                            android:textColor="@color/colorGreen"
                            app:fontFamily="@font/googlesansregular"
                            android:textSize="15sp"/>
                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/bginput"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                            android:drawablePadding="10dp" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="5dp"
                    app:layout_constraintTop_toBottomOf="@id/ly_1"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/remember_me"
                            android:fontFamily="@font/googlesansregular"
                            android:textColor="@color/colorGreen"
                            android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <Button
                            android:id="@+id/btn_login"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/bg_btn_login"
                            android:text="@string/login"
                            android:textColor="#fff"
                            android:fontFamily="@font/googlesansbold"
                            android:textSize="20sp"/>
                </LinearLayout>

                <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                    <View
                            android:id="@+id/view1"
                            android:layout_width="100dp"
                            android:layout_height="1dp"
                            android:layout_marginTop="4dp"
                            android:background="@color/colorPrimary"
                            app:layout_constraintEnd_toStartOf="@id/donthaveaccount"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                            android:id="@+id/donthaveaccount"
                            android:layout_width="89dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/googlesansregular"
                            android:text="@string/don_t_have_an_account"
                            android:textColor="@color/colorGreen"
                            android:textSize="8sp"
                            app:layout_constraintEnd_toStartOf="@id/view2"
                            app:layout_constraintStart_toEndOf="@id/view1"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="SmallSp" />

                    <View
                            android:id="@+id/view2"
                            android:layout_width="100dp"
                            android:layout_height="1dp"
                            android:layout_marginTop="4dp"
                            android:background="@color/colorPrimary"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/donthaveaccount"
                            app:layout_constraintTop_toTopOf="parent" />


                </android.support.constraint.ConstraintLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="40dp"
                        android:orientation="horizontal">
                    <Button
                            android:id="@+id/btn_signup"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/bg_btn_login"
                            android:text="@string/sign_up"
                            android:textColor="#fff"
                            android:fontFamily="@font/googlesansbold"
                            android:textSize="20sp"/>
                </LinearLayout>

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>

