<?xml version="1.0" encoding="utf-8"?>

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ContentDescription"
            android:background="@color/bgPrimary"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="25dp"
            tools:context=".akun_fragment">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <View
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:background="@drawable/color_gradient_gree"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                <LinearLayout
                        android:id="@+id/ly_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:gravity="center"
                        android:orientation="vertical">
                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="130dp"
                            android:src="@drawable/villain"
                            android:layout_marginTop="40dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Personal Information"
                            android:textColor="#fff"
                            android:textSize="20sp"
                            android:fontFamily="@font/googlesansbold"
                            android:layout_marginTop="16dp"/>

                </LinearLayout>

                <LinearLayout
                        android:id="@+id/ly_4"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@drawable/bgbox"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="220dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:orientation="vertical">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="8dp"
                            android:orientation="vertical">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Username"
                                android:fontFamily="@font/googlesansbold"
                                android:textColor="@color/colorGreen"/>

                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="@drawable/bginput"
                                android:hint="@string/username"
                                android:inputType="textPersonName"
                                android:paddingStart="10dp"
                                android:fontFamily="@font/googlesansregular"/>

                    </LinearLayout>
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="8dp"
                            android:orientation="vertical">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Email"
                                android:fontFamily="@font/googlesansbold"
                                android:textColor="@color/colorGreen"/>

                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="@drawable/bginput"
                                android:hint="Edit your Email"
                                android:inputType="textEmailAddress"
                                android:paddingStart="10dp"
                                android:fontFamily="@font/googlesansregular"/>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintTop_toBottomOf="@id/ly_4"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="50dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="20dp">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp">
                        <Button
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="@drawable/bg_btn_login"
                                android:text="@string/save_profile"
                                android:textColor="#fff"/>
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp">
                        <Button
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="@drawable/bgcancel"
                                android:text="@string/cancel"
                                android:textColor="#fff"/>
                    </LinearLayout>

                </LinearLayout>

            </android.support.constraint.ConstraintLayout>



        </ScrollView>
                    

</android.support.constraint.ConstraintLayout>

